[gd_scene load_steps=3 format=3 uid="uid://xkw6a187it4l"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_u4caq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_js5fq"]
bg_color = Color(0, 0.497146, 0.233009, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u4caq")

[node name="hide_ui" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_right = 6.0
offset_bottom = 25.0
grow_horizontal = 0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(50, 0)
focus_mode = 0

[node name="CPUParticles2D" type="CPUParticles2D" parent="hide_ui"]
modulate = Color(0.0156863, 1, 0, 0.592157)
position = Vector2(37, 16)
amount = 10
lifetime = 4.0
preprocess = 10.0
randomness = 1.0
lifetime_randomness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(16, 10)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
angular_velocity_min = 100.0
angular_velocity_max = 100.0
damping_max = 1.0
scale_amount_max = 5.0

[node name="BehaviourLeftUI" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.215
anchor_bottom = 1.0
offset_right = 8.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_js5fq")

[node name="MarginContainer" type="MarginContainer" parent="BehaviourLeftUI"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="RichTextLabel" type="RichTextLabel" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Behaviour Parameters
"
fit_content = true

[node name="alignment" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/alignment"]
layout_mode = 2
text = "  Alignment"

[node name="HSlider" type="HSlider" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/alignment"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="cohesion" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/cohesion"]
layout_mode = 2
text = "  Cohesion
"

[node name="HSlider" type="HSlider" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/cohesion"]
layout_mode = 2
max_value = 10.0
step = 0.5

[node name="seperation" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/seperation"]
layout_mode = 2
text = "   Seperation"

[node name="HSlider" type="HSlider" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/seperation"]
layout_mode = 2
max_value = 1000.0

[node name="sep sensitivity" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/sep sensitivity"]
layout_mode = 2
text = "   Sep. Sensitivity"

[node name="HSlider" type="HSlider" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/sep sensitivity"]
layout_mode = 2
max_value = 200.0

[node name="min speed" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/min speed"]
layout_mode = 2
text = "   Min Speed"

[node name="HSlider" type="HSlider" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/min speed"]
layout_mode = 2
max_value = 500.0

[node name="max speed" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/max speed"]
layout_mode = 2
text = "   Max Speed"

[node name="HSlider" type="HSlider" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/max speed"]
layout_mode = 2
max_value = 500.0

[node name="max acc" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/max acc"]
layout_mode = 2
text = "   Max Acceleration"
metadata/_edit_group_ = true

[node name="HSlider" type="HSlider" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/max acc"]
layout_mode = 2
max_value = 1000.0

[node name="fov" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/fov"]
layout_mode = 2
text = "   FOV"

[node name="HSlider" type="HSlider" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/fov"]
layout_mode = 2
max_value = 360.0

[node name="detection radius" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/detection radius"]
layout_mode = 2
text = "   Detection Radius**"

[node name="HSlider" type="HSlider" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/detection radius"]
layout_mode = 2
max_value = 500.0

[node name="trail length" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/trail length"]
layout_mode = 2
text = "   Trail Length"

[node name="HSlider" type="HSlider" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/trail length"]
layout_mode = 2

[node name="ButtonTray" type="VBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="checkBoxes" type="HBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray"]
layout_mode = 2

[node name="trails_check" type="CheckButton" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray/checkBoxes"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Trails"
alignment = 1
icon_alignment = 1

[node name="colors_check" type="CheckButton" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray/checkBoxes"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Clusters"

[node name="info" type="HBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray"]
layout_mode = 2
size_flags_vertical = 4

[node name="fps" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray/info"]
layout_mode = 2
size_flags_horizontal = 3
text = "FPS: "

[node name="boid_count" type="Label" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray/info"]
layout_mode = 2
size_flags_horizontal = 3
text = "Boids: "

[node name="radomize_reset" type="HBoxContainer" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="reset_button" type="Button" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray/radomize_reset"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Reset"
metadata/_edit_group_ = true

[node name="randomize_button" type="Button" parent="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray/radomize_reset"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Randomize"

[connection signal="pressed" from="hide_ui" to="." method="_on_hide_ui_pressed"]
[connection signal="drag_ended" from="BehaviourLeftUI/MarginContainer/VBoxContainer/alignment/HSlider" to="." method="_on_alignment_slider_drag_ended"]
[connection signal="drag_ended" from="BehaviourLeftUI/MarginContainer/VBoxContainer/cohesion/HSlider" to="." method="_on_cohesion_slider_drag_ended"]
[connection signal="drag_ended" from="BehaviourLeftUI/MarginContainer/VBoxContainer/seperation/HSlider" to="." method="_on_separation_slider_drag_ended"]
[connection signal="drag_ended" from="BehaviourLeftUI/MarginContainer/VBoxContainer/sep sensitivity/HSlider" to="." method="_on_sep_sensitivity_slider_drag_ended"]
[connection signal="drag_ended" from="BehaviourLeftUI/MarginContainer/VBoxContainer/min speed/HSlider" to="." method="_on_min_speed_slider_drag_ended"]
[connection signal="drag_ended" from="BehaviourLeftUI/MarginContainer/VBoxContainer/max speed/HSlider" to="." method="_on_max_speed_slider_drag_ended"]
[connection signal="drag_ended" from="BehaviourLeftUI/MarginContainer/VBoxContainer/max acc/HSlider" to="." method="_on_max_acc_slider_drag_ended"]
[connection signal="drag_ended" from="BehaviourLeftUI/MarginContainer/VBoxContainer/fov/HSlider" to="." method="_on_fov_slider_drag_ended"]
[connection signal="drag_ended" from="BehaviourLeftUI/MarginContainer/VBoxContainer/detection radius/HSlider" to="." method="_on_detection_radius_slider_drag_ended"]
[connection signal="drag_ended" from="BehaviourLeftUI/MarginContainer/VBoxContainer/trail length/HSlider" to="." method="_on_trail_length_slider_drag_ended"]
[connection signal="pressed" from="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray/checkBoxes/trails_check" to="." method="_on_trails_check_pressed"]
[connection signal="pressed" from="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray/checkBoxes/colors_check" to="." method="_on_colors_check_pressed"]
[connection signal="pressed" from="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray/radomize_reset/reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="BehaviourLeftUI/MarginContainer/VBoxContainer/ButtonTray/radomize_reset/randomize_button" to="." method="_on_randomize_button_pressed"]
